Разметка Седоны поправки 3

--- a/catalog.html
+++ b/catalog.html
@@ -38,7 +38,6 @@
               </li>
             </ul>
           </fieldset>
-
           <fieldset class="form-column">
             <legend>Тип жилья:</legend>
             <ul>
@@ -56,8 +55,8 @@
               </li>
             </ul>
           </fieldset>
-          <div class="range">
-            <h4>Стоимость в сутки (р):</h4>
+          <fieldset class="form-column-right">
+            <legend>Стоимость в сутки (р):</legend>
             <div class="range-values">
               <span>от 0 </span> <span>до 3000</span>
             </div>
@@ -67,7 +66,7 @@
                 <div class="toggle max-toggle"></div>
             </div>
             <button type="submit">Показать</button>
-          </div>
+          </fieldset>
         </form>
 
         <div class="result">
@@ -83,7 +82,7 @@
         </div>
         <div class="hotels">
           <div class="hotel-info">
-            <img src="http://placehold.it/150x100" alt="Amara" />
+            <img src="http://placehold.it/150x100" alt="Amara">
             <h3>Amara resort & spa</h3>
             <p>
               <span class="hotel-type">Гостиница</span> <span>от 3500 р.</span>
@@ -101,26 +100,26 @@
             <span>Рейтинг: 8,5</span>
           </div>
           <div class="hotel-info">
-            <img src="http://placehold.it/150x100" alt="Amara" />
+            <img src="http://placehold.it/150x100" alt="Amara">
             <h3>Desert Quail inn</h3>
             <p>
-              <span class="motel-type">Мотель</span> <span>от 2000 р.</span>
+              <span class="hotel-type">Мотель</span> <span>от 2000 р.</span>
             </p>
-              <a href="#">Подробнее</a>
-              <a href="#">Забронировать</a>
+            <a href="#">Подробнее</a>
+            <a href="#">Забронировать</a>
           </div>
-            <div class="hotel-rating">
-              <ul>
-                <li><i class="icon-star"></i></li>
-                <li><i class="icon-star"></i></li>
-              </ul>
-              <span>Рейтинг: 8,9</span>
-            </div>
+          <div class="hotel-rating">
+            <ul>
+              <li><i class="icon-star"></i></li>
+              <li><i class="icon-star"></i></li>
+            </ul>
+            <span>Рейтинг: 8,9</span>
+          </div>
           <div class="hotel-info">
-            <img src="http://placehold.it/150x100" alt="Amara" />
+            <img src="http://placehold.it/150x100" alt="Amara">
             <h3>Villas at poco diablo</h3>
             <p>
-              <span class="apartment-type">Апартаменты</span> <span>от 4000 р.</span>
+              <span class="hotel-type">Апартаменты</span> <span>от 4000 р.</span>
             </p>
             <a href="#">Подробнее</a>
             <a href="#">Забронировать</a>
