--- a/index.html
+++ b/index.html
@@ -36,112 +36,111 @@
               </p>
             </div>
             <figure>
-              <img src="http://placehold.it/150x100" alt="" />
+              <img src="http://placehold.it/150x100" alt="">
             </figure>
           </div>
-            <ul class="features">
-              <li class="feature-housing">
-                <h4>Жилье</h4>
-                <p>
-                  Рекомендуем пожить в настоящем мотеле,
-                  все как в кино!
-                </p>
-              </li>
-              <li class="feature-food">
-                <h4>Еда</h4>
-                <p>
-                  Всегда заказывайте фирменный бургер,
-                  вы не разочаруетесь!
-                </p>
-              </li>
-              <li class="feature-souvenirs">
-                <h4>Сувениры</h4>
-                <p>
-                  Не только китайского,
-                  но и местного производства!
-                </p>
-              </li>
-            </ul>
-
-            <div class="reason">
-              <div class="media-block">
-                <img src="http://placehold.it/150x100" alt="" />
-              </div>
-              <h3>Там есть мост дьявола</h3>
-              <p>- № 2 -</p>
+          <ul class="features">
+            <li class="feature-housing">
+              <h4>Жилье</h4>
               <p>
-                Да, по нему можно пройти!
-                Если конечно вы осмелитесь
+                Рекомендуем пожить в настоящем мотеле,
+                все как в кино!
               </p>
+            </li>
+            <li class="feature-food">
+              <h4>Еда</h4>
+              <p>
+                Всегда заказывайте фирменный бургер,
+                вы не разочаруетесь!
+              </p>
+            </li>
+            <li class="feature-souvenirs">
+              <h4>Сувениры</h4>
+              <p>
+                Не только китайского,
+                но и местного производства!
+              </p>
+            </li>
+          </ul>
+          <div class="reason">
+            <div class="media-block">
+              <img src="http://placehold.it/150x100" alt="">
             </div>
-              <ul class="reasons-list">
-                <li>
-                  <h4>Небольшая площадь</h4>
-                  <p>- № 3 -</p>
-                  <p>
-                    Все достопремечательности
-                    находятся очень близко
-                  </p>
-                </li>
-                <li>
-                  <h4>Красивая дорога</h4>
-                  <p>- № 4 -</p>
-                  <p>
-                    Ехать в седону из Лас-Вегаса совсем
-                    не скучно!
-                  </p>
-                </li>
-                <li>
-                  <h4>Мало туристов</h4>
-                  <p>- № 5 -</p>
-                  <p>
-                    Большенство едет в Гранд Каньон и
-                    толпится там
-                  </p>
-                </li>
-              </ul>
-            <div class="hotel-search">
-              <header class="interested">
-                <h4>Заинтересовались?</h4>
-                <p>
-                  Укажите предполагаемые даты поездки,
-                  и мы покажем вам лучшие предложения гостиниц в седоне
-                </p>
-              </header>
-              <img src="http://placehold.it/150x100" alt="map">
-              <div class="hotels-search">
-                <h4>
-                  Поиск гостиницы в седоне
-                </h4>
-                <form action="" method="post">
-                  <div class="date-with-button">
-                    <label for="check-in">Дата заезда:</label>
-                    <input type="date" id="check-in">
-                    <button type="button" class="calendar">
-                  </div>
-                  <div class="date-with-button">
-                    <label for="check-out">Дата выезда:</label>
-                    <input type="date" id="check-out">
-                    <button type="button" class="calendar">
-                  </div>
-                  <div class="number-with-button">
-                    <label for="adults-count">Взрослые:</label>
-                    <button type="button" class="decrease-number">
-                    <input type="number" value="2" id="adults-count">
-                    <button type="button" class="increase-number">
-                  </div>
-                  <div class="number-with-button">
-                    <label for="childrens-count">Дети:</label>
-                    <button type="button" class="decrease-number">
-                    <input type="number" value="0" id="childrens-count">
-                    <button type="button" class="increase-number">
-                  </div>
-                  <div class="buttons">
-        				    <input type="submit" value="Найти">
-        			    </div>
-                </form>
-              </div>
+            <h3>Там есть мост дьявола</h3>
+            <p>- № 2 -</p>
+            <p>
+              Да, по нему можно пройти!
+              Если конечно вы осмелитесь
+            </p>
+          </div>
+          <ul class="reasons-list">
+            <li>
+              <h4>Небольшая площадь</h4>
+              <p>- № 3 -</p>
+              <p>
+                Все достопремечательности
+                находятся очень близко
+              </p>
+            </li>
+            <li>
+              <h4>Красивая дорога</h4>
+              <p>- № 4 -</p>
+              <p>
+                Ехать в седону из Лас-Вегаса совсем
+                не скучно!
+              </p>
+            </li>
+            <li>
+              <h4>Мало туристов</h4>
+              <p>- № 5 -</p>
+              <p>
+                Большенство едет в Гранд Каньон и
+                толпится там
+              </p>
+            </li>
+          </ul>
+          <div class="hotel-search">
+            <header class="interested">
+              <h4>Заинтересовались?</h4>
+              <p>
+                Укажите предполагаемые даты поездки,
+                и мы покажем вам лучшие предложения гостиниц в седоне
+              </p>
+            </header>
+            <img src="http://placehold.it/150x100" alt="map">
+            <div class="hotels-search">
+              <h4>
+                Поиск гостиницы в седоне
+              </h4>
+              <form action="" method="post">
+                <label for="check-in">Дата заезда:</label>
+                <div class="date-with-button">
+                  <input type="date" id="check-in">
+                  <button type="button" class="calendar">
+                </div>
+                <label for="check-out">Дата выезда:</label>
+                <div class="date-with-button">
+                  <input type="date" id="check-out">
+                  <button type="button" class="calendar">
+                </div>
+                <label for="adults-count">Взрослые:</label>
+                <div class="number-with-button">
+                  <button type="button" class="decrease-number">
+                  <input type="number" value="2" id="adults-count">
+                  <button type="button" class="increase-number">
+                </div>
+                <label for="childrens-count">Дети:</label>
+                <div class="number-with-button">
+                  <button type="button" class="decrease-number">
+                  <input type="number" value="0" id="childrens-count">
+                  <button type="button" class="increase-number">
+                </div>
+                <div class="buttons">
+      				    <input type="submit" value="Найти">
+      			    </div>
+              </form>
             </div>
+          </div>
         </div>
       </main>
 
@@ -154,9 +153,9 @@
           <li><a href="#"><i class="social-fb"></i></a></li>
           <li><a href="#"><i class="social-yout"></i></a></li>
         </ul>
-          <address class="autor">
-            <a href="#"> website by htmlacademy </a>
-          </address>
+        <address class="autor">
+          <a href="#"> website by htmlacademy </a>
+        </address>
       </footer>
     </div>
   </body>
