--- a/index.html
+++ b/index.html
@@ -62,19 +62,21 @@
               </p>
             </li>
           </ul>
-          <div class="reason">
-            <div class="media-block">
+          <div class="media-block">
+            <figure>
               <img src="http://placehold.it/150x100" alt="">
+            </figure>
+            <div class="reason">
+              <h3>Там есть мост дьявола</h3>
+              <p>- № 2 -</p>
+              <p>
+                Да, по нему можно пройти!
+                Если конечно вы осмелитесь
+              </p>
             </div>
-            <h3>Там есть мост дьявола</h3>
-            <p>- № 2 -</p>
-            <p>
-              Да, по нему можно пройти!
-              Если конечно вы осмелитесь
-            </p>
           </div>
           <ul class="reasons-list">
-            <li>
+            <li class="reason">
               <h4>Небольшая площадь</h4>
               <p>- № 3 -</p>
               <p>
@@ -82,7 +84,7 @@
                 находятся очень близко
               </p>
             </li>
-            <li>
+            <li class="reason">
               <h4>Красивая дорога</h4>
               <p>- № 4 -</p>
               <p>
@@ -90,7 +92,7 @@
                 не скучно!
               </p>
             </li>
-            <li>
+            <li class="reason">
               <h4>Мало туристов</h4>
               <p>- № 5 -</p>
               <p>
